--- a/test.html
+++ b/test.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="men">
+    <section class="men" >
         <div class="menn" id="right">0</div>
-        <div class="mem" id="left">0</div>
-    </div>
+        <div class="mem" id="left"><img></div>
+    </section>
 </body>
 </html>
