--- a/test.html
+++ b/test.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="men" >
-        <div class="menn" id="right">0</div>
-        <div class="mem" id="left"><img></div>
+    <section class="men">
+        <div class="menn" id="me">0</div>
+        <div class="mem" id="we"></div>
+
     </section>
+        
+        <script src="script.js"></script>
+    
 </body>
 </html>
